# check-yamlschema

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  check_yamlschema.py  setup.cfg
.github/workflows/: pre-commit.yml  tests.yml
tests/: extraEnvs.json  food.json  person.json  referenced_person.json  test-k8s.yaml  test.yaml
