[metadata]
name = check-yamlschema
version = 0.0.4
description = A CLI and pre-commit hooks for jsonschema validation in YAML files with multiple documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmlrt/check-yamlschema
author = Julien Mailleret
author_email = julien@mailleret.fr
license = MIT
license_files =
    LICENSE

[options]
py_modules = check_yamlschema
python_requires = >=3.8
install_requires =
    jsonschema<4.18.0
    pyyaml
    requests

[options.entry_points]
console_scripts =
    check-yamlschema=check_yamlschema:main

[isort]
profile = black

[flake8]
max-line-length = 120
